css/navigation.css
:root {
  --primary-text-color: #eee;
  --background-color: linear-gradient(0deg, rgb(6, 5, 21) 50%, rgb(86, 0, 167) 120%);
  --overlay-color: #9c4bfe;
  --primary-font-family: "K2D-Regular";
  --secondary-font-family: "K2D-SemiBold";
  --boldest-font-family: "K2D-Bold";
  --spacing-small: 8px;
  --spacing-main: 16px;
  --spacing-large: 36px;
}

header {
  color: var(--primary-text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0;
  padding: var(--spacing-small);
  position: relative;
  z-index: 10;
}

nav ul {
  cursor: pointer;
  display: none;
  list-style-type: none;
  top: 100%;
  left: 0;
  background-color: rgba(6, 5, 21, 0.9);
  padding: var(--spacing-small);
  position: absolute;
}

.submenu {
  position: absolute;
  left: 100%;
  top: 0;
  display: none;
  z-index: 11;
}

.submenu-2 {
  position: absolute;
  top: 0;
  left: 100%;
  background-color: rgba(6, 5, 21, 0.9);
  padding: var(--spacing-small);
  display: none;
  z-index: 12;
}

.submenu-3 {
  position: absolute;
  top: 150px;
  background-color: rgba(6, 5, 21, 0.9);
  padding: var(--spacing-small);
  display: none;
  z-index: 13;
}

.submenu li {
  padding-left: var(--spacing-main);
}

.submenu li:hover {
  background-color: var(--overlay-color);
}

.hamburger-menu {
  height: 50px;
  width: 50px;
}

.logo-mobile {
  position: relative;
  height: 55px;
  width: 55px;
}

/* ----- Navlink ----*/
nav {
  font-family: "K2D-Regular";
}

nav a {
  color: #fff;
  font-family: "K2D-Regular";
}

nav ul li:hover {
  background-color: var(--overlay-color);
}

a:link {
  text-decoration: none;
}

a:hover {
  background-color: transparent;
  text-decoration: underline;
}

/* Display arrow only for items with the "with-arrow" class */
nav ul > li.with-arrow::before {
  content: "▶";
  margin-left: 5px;
  z-index: 12;
}

/* Remove arrow for items without children */
nav ul > li:not(.with-arrow) {
  position: relative;
}

/* Remove arrow for last children */
nav ul > li:not(.with-arrow) > ul li:last-child::before {
  content: none;
}
.submenu,
.submenu-2,
.submenu-3 {
  padding: var(--spacing-small) 0;
}

/* Adjust padding for submenu items */
.submenu li,
.submenu-2 li,
.submenu-3 li {
  padding: var(--spacing-small) var(--spacing-main);
}

.submenu li:hover,
.submenu-2 li:hover,
.submenu-3 li:hover {
  background-color: var(--overlay-color);
}

nav ul > li::before,
.submenu li::before,
.submenu-2 li::before,
.submenu-3 li::before {
  white-space: nowrap;
}

.submenu,
.submenu-2,
.submenu-3 {
  padding: var(--spacing-small) 0;
}

.submenu li,
.submenu-2 li,
.submenu-3 li {
  padding: var(--spacing-small);
  max-width: 160px;
  min-width: 140px;
}

/* Media Query adjustments */
@media screen and (min-width: 991px) {
  header {
    display: block;
    margin-right: var(--spacing-large);
    margin-left: var(--spacing-large);
  }

  nav .hamburger-menu {
    display: none;
  }

  .logo-mobile {
    display: none;
  }

  nav > ul {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    list-style-type: none;
    position: relative;
  }

  nav > ul > li {
    cursor: pointer;
    padding: var(--spacing-small) var(--spacing-main);
    position: relative;
  }

  .submenu li {
    padding-left: none;
  }

  .submenu {
    position: absolute;
    top: 100%;
    left: 0;
    background-color: rgba(6, 5, 21, 0.9);
    padding: var(--spacing-small);
  }

  .submenu li::before,
  .submenu-2 li::before,
  .submenu-3 li::before {
    white-space: nowrap;
  }

  .submenu li,
  .submenu-2 li,
  .submenu-3 li {
    padding: var(--spacing-small) var(--spacing-main);
  }

  /* Remove arrow for items without children */
  nav ul > li:not(.with-arrow):only-child::before,
  .submenu li:not(.with-arrow):only-child::before,
  .submenu-2 li:not(.with-arrow):only-child::before,
  .submenu-3 li:not(.with-arrow):only-child::before {
    content: none;
  }
}

